// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Billing Banners:  Enterprise banner renders 1`] = `
<Banner
  action={
    Object {
      "content": "Contact Us",
      "external": true,
      "onClick": [Function],
      "to": "https://www.sparkpost.com/contact-enterprise",
    }
  }
  status="default"
  title="Enterprise"
>
  <p>
    Enterprise-grade financial guarantees with 99.9% uptime SLA and guaranteed burst rates.
  </p>
  <ul>
    <li>
      Includes all standard SparkPost and Premium features
    </li>
    <li>
      Comprehensive uptime SLAs with service credits
    </li>
    <li>
      The industry’s only burst-rate guarantee
    </li>
    <li>
      Support for iOS Universal Links and Android App Links
    </li>
  </ul>
</Banner>
`;

exports[`Billing Banners:  PendingPlanBanner should render with pending_subscription 1`] = `
<Banner
  status="info"
  title="Pending Plan Change"
>
  <p>
    You're scheduled to switch to the 
     plan on 
    Oct 05, 2020
    , and can't update your plan until that switch happens.
  </p>
</Banner>
`;

exports[`Billing Banners:  Premium banner renders 1`] = `
<Banner
  action={
    Object {
      "content": "Contact Us",
      "external": true,
      "onClick": [Function],
      "to": "https://www.sparkpost.com/contact-premium",
    }
  }
  status="default"
  title="Premium Addon Plan"
>
  <p>
    Get full-service Technical Account Management with proactive reporting, planning & reviews.
  </p>
  <ul>
    <li>
      Includes all standard SparkPost features
    </li>
    <li>
      Dedicated Technical Account Manager (TAM)
    </li>
    <li>
      Global ISP relations and mediation
    </li>
    <li>
      Deliverability data analysis and guidance with 250ok
    </li>
  </ul>
</Banner>
`;

exports[`Billing Banners:  Premium banner renders correctly for aws users 1`] = `
<Banner
  action={
    Object {
      "component": [Function],
      "content": "Request Premium Support",
      "onClick": [Function],
      "to": "/support/aws-premium",
    }
  }
  status="default"
  title="Premium Addon Plan"
>
  <p>
    Get full-service Technical Account Management with proactive reporting, planning & reviews.
  </p>
  <ul>
    <li>
      Includes all standard SparkPost features
    </li>
    <li>
      Dedicated Technical Account Manager (TAM)
    </li>
    <li>
      Global ISP relations and mediation
    </li>
    <li>
      Deliverability data analysis and guidance with 250ok
    </li>
  </ul>
</Banner>
`;
